--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.7.7",
     "colorthief": "^2.6.0",
     "framer-motion": "^11.11.17",
+    "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lazyload": "^3.2.1",
