--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,16 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "@lottiefiles/dotlottie-react": "^0.10.0",
     "@lottiefiles/react-lottie-player": "^3.5.4",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.3",
+    "@react-google-maps/api": "^2.20.5",
     "@stripe/react-stripe-js": "^3.0.0",
     "@stripe/stripe-js": "^5.2.0",
     "@testing-library/user-event": "^13.5.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.16.7",
     "axios": "^1.7.7",
     "colorthief": "^2.6.0",
     "framer-motion": "^11.11.17",
     "lucide-react": "^0.468.0",
+    "mapbox-gl": "^3.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lazyload": "^3.2.1",
