--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,9 @@ Mako==1.3.5
 MarkupSafe==2.1.5
 SQLAlchemy==2.0.35
 typing_extensions==4.12.2
+gunicorn==20.1.0
 Werkzeug==3.0.4
+stripe
 python-dotenv
 flask-cors
 mysqlclient
