--- a/my-app/Dockerfile
+++ b/my-app/Dockerfile
@@ -7,3 +7,4 @@ RUN npm run build
 
 FROM nginx:alpine
 COPY --from=build /my-app/build /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/conf.d/default.conf
