--- a/my-app/package.json
+++ b/my-app/package.json
@@ -49,7 +49,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://127.0.0.1:5000",
+  "proxy": "https://api.mymeral.me",
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.0.1",
